<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/click"
        style="@style/click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="5sp"
        android:text="@string/example_clicks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/level_title"
        style="@style/level_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:text="@string/level_title"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/click" />

    <TextView
        android:id="@+id/nextlevel_title"
        style="@style/level_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:text="@string/nextlevel_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/click" />

    <TextView
        android:id="@+id/level"
        style="@style/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_level"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_title" />

    <TextView
        android:id="@+id/nextlevel"
        style="@style/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_nextlevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/nextlevel_title" />

    <View
        android:id="@+id/view"
        android:layout_width="1sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bronze_icon"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/bronze"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/level_title"
        android:contentDescription="@string/bronze_medal" />

    <ImageView
        android:id="@+id/silver_icon"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/silver"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/level_title"
        android:contentDescription="@string/silver_medal" />

    <ImageView
        android:id="@+id/gold_icon"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/gold"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/level_title"
        android:contentDescription="@string/gold_medal" />

    <ImageView
        android:id="@+id/diamond_icon"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/diamond"
        app:layout_constraintBottom_toBottomOf="@+id/level"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/level_title"
        android:contentDescription="@string/diamond_medal" />

    <View
        android:id="@+id/hitbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/instructions"
        style="@style/level_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/level"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="150sp"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>